# yappi23

./: .dockerignore  Dockerfile  pyproject.toml
app/: main.py  templates.py  yadict.py
